GoalScroller: fix: word-wrap for title

--- a/overlay/everylunaever/bunathon2025/goal_scroller/styles.css
+++ b/overlay/everylunaever/bunathon2025/goal_scroller/styles.css
@@ -168,7 +168,7 @@ div#goalsContainer div.goal .title-container {
 }
 
 div#goalsContainer div.goal .title-container .title {
-    text-wrap-mode: nowrap;
+    text-wrap: nowrap;
     display: inline-block;
 }
 
